逻辑移位器（shifter）

--- a/design/arch.qsf
+++ b/design/arch.qsf
@@ -68,7 +68,7 @@ set_global_assignment -name MAX_CORE_JUNCTION_TEMP 85
 # Analysis & Synthesis Assignments
 # ================================
 set_global_assignment -name FAMILY "Cyclone II"
-set_global_assignment -name TOP_LEVEL_ENTITY dec3_8
+set_global_assignment -name TOP_LEVEL_ENTITY shifter
 
 # Fitter Assignments
 # ==================
@@ -113,9 +113,11 @@ set_global_assignment -name SEARCH_PATH "d:\\code\\quartus\\computer_arch\\desig
 set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
 set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
 set_global_assignment -name BDF_FILE dec3_8.bdf
+set_global_assignment -name VECTOR_WAVEFORM_FILE VWF/dec3_8.vwf
+set_global_assignment -name BDF_FILE shifter.bdf
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
-set_global_assignment -name VECTOR_WAVEFORM_FILE VWF/dec3_8.vwf
-set_global_assignment -name INCREMENTAL_VECTOR_INPUT_SOURCE "D:/Code/Quartus/computer_arch/design/VWF/dec3_8.vwf"
+set_global_assignment -name VECTOR_WAVEFORM_FILE VWF/shifter.vwf
+set_global_assignment -name INCREMENTAL_VECTOR_INPUT_SOURCE "D:/Code/Quartus/computer_arch/design/VWF/shifter.vwf"
