--- a/design/arch.qsf
+++ b/design/arch.qsf
@@ -68,7 +68,7 @@ set_global_assignment -name MAX_CORE_JUNCTION_TEMP 85
 # Analysis & Synthesis Assignments
 # ================================
 set_global_assignment -name FAMILY "Cyclone II"
-set_global_assignment -name TOP_LEVEL_ENTITY addsub8
+set_global_assignment -name TOP_LEVEL_ENTITY alucomb
 
 # Fitter Assignments
 # ==================
@@ -132,9 +132,11 @@ set_global_assignment -name VECTOR_WAVEFORM_FILE VWF/sh1c.vwf
 set_global_assignment -name BDF_FILE add8.bdf
 set_global_assignment -name VECTOR_WAVEFORM_FILE VWF/add8.vwf
 set_global_assignment -name BDF_FILE addsub8.bdf
+set_global_assignment -name VECTOR_WAVEFORM_FILE VWF/addsub8.vwf
+set_global_assignment -name BDF_FILE alucomb.bdf
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
-set_global_assignment -name VECTOR_WAVEFORM_FILE VWF/addsub8.vwf
-set_global_assignment -name INCREMENTAL_VECTOR_INPUT_SOURCE "D:/Code/Quartus/computer_arch/design/VWF/addsub8.vwf"
+set_global_assignment -name VECTOR_WAVEFORM_FILE VWF/alucomb.vwf
+set_global_assignment -name INCREMENTAL_VECTOR_INPUT_SOURCE "D:/Code/Quartus/computer_arch/design/VWF/alucomb.vwf"
