--- a/design/arch.qsf
+++ b/design/arch.qsf
@@ -146,5 +146,31 @@ set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_RO
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 set_global_assignment -name MIF_FILE MIF/alu.mif
 set_global_assignment -name VECTOR_WAVEFORM_FILE VWF/alu_ROM.vwf
+set_location_assignment PIN_81 -to CLK
+set_location_assignment PIN_82 -to CLRN
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
 set_global_assignment -name INCREMENTAL_VECTOR_INPUT_SOURCE "D:/Code/Quartus/computer_arch/design/VWF/alu_ROM.vwf"
+set_location_assignment PIN_12 -to Q0[7]
+set_location_assignment PIN_11 -to Q0[6]
+set_location_assignment PIN_10 -to Q0[5]
+set_location_assignment PIN_8 -to Q0[4]
+set_location_assignment PIN_6 -to Q0[3]
+set_location_assignment PIN_5 -to Q0[2]
+set_location_assignment PIN_4 -to Q0[1]
+set_location_assignment PIN_3 -to Q0[0]
+set_location_assignment PIN_133 -to Q1[7]
+set_location_assignment PIN_128 -to Q1[6]
+set_location_assignment PIN_44 -to Q1[5]
+set_location_assignment PIN_43 -to Q1[4]
+set_location_assignment PIN_41 -to Q1[3]
+set_location_assignment PIN_40 -to Q1[2]
+set_location_assignment PIN_39 -to Q1[1]
+set_location_assignment PIN_37 -to Q1[0]
+set_location_assignment PIN_152 -to Q2[7]
+set_location_assignment PIN_151 -to Q2[6]
+set_location_assignment PIN_150 -to Q2[5]
+set_location_assignment PIN_149 -to Q2[4]
+set_location_assignment PIN_147 -to Q2[3]
+set_location_assignment PIN_146 -to Q2[2]
+set_location_assignment PIN_145 -to Q2[1]
+set_location_assignment PIN_144 -to Q2[0]
